# assistant

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  TODO.md  agents.toml  config.yaml  docker-compose.yml  pyproject.toml
.claude/: code_style.md  settings.json
.github/workflows/: ci.yml
docs/: README.md  project_structure.md
docs/adr/: 0001-session-ownership.md  README.md
docs/architecture/: AUDIT.md  README.md  adapters.md  api.md  attachments.md  authentication.md  context.md  frontend.md  import.md  markdown.md  notesservice.md  summarization.md
docs/modules/: README.md  config.md  tui.md
docs/modules/registry/: registry.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.test.ts  auth.ts  client.ts  files.test.ts  files.ts  nodes.ts  notebooks.ts  notes.ts  users.ts
frontend/src/components/: AttachmentList.tsx  DebugBlockView.test.tsx  DebugBlockView.tsx  Layout.test.tsx  Layout.tsx  MarkdownToolbar.test.tsx  MarkdownToolbar.tsx  NoteEditor.tsx  NoteList.test.tsx  NoteList.tsx  NotebookList.test.tsx  NotebookList.tsx
frontend/src/contexts/: AuthContext.tsx  UserContext.tsx
frontend/src/markdown/: blockList.test.ts  blockList.ts  mapper.test.ts  mapper.ts  parser.test.ts  parser.ts  reconcile.test.ts  reconcile.ts  serverRegistry.test.ts  serverRegistry.ts
frontend/src/pages/: LoginPage.test.tsx  LoginPage.tsx  RegisterPage.test.tsx  RegisterPage.tsx
frontend/src/test/: renderWithProviders.tsx
frontend/src/types/: index.ts
scripts/: verify_setup.sh
src/assistant/: __init__.py  config.py  export.py  restore.py  setup_database.py
src/assistant/adapters/: __init__.py  content.py  dataload.py  evernote.py  registry.py  secrets.py  source.py
src/assistant/adapters/plugins/: __init__.py  fake.py
src/assistant/agents/: infra.py  rag.py  vectors.py
src/assistant/api/: __init__.py  app.py  dependencies.py  exceptions.py
src/assistant/api/routes/: auth.py  files.py  nodes.py  notebooks.py  notes.py  users.py
src/assistant/api/schemas/: auth.py  files.py  nodes.py  notebooks.py  notes.py  pagination.py  users.py
src/assistant/attachments/: __init__.py  exceptions.py  service.py  storage.py
src/assistant/auth/: service.py
src/assistant/cli/: __init__.py  add_evernote.py  api_client.py  api_server.py  chat.py  drop_database.py  eval.py  export_db.py  generate_embeddings.py  import_db.py  load_data.py  load_note.py  query.py  reset_db.py  table.py
src/assistant/evals/: dataset.py  dataset.yaml  target.py
src/assistant/models/: __init__.py  content.py  database.py  schema.py
src/assistant/notes/: __init__.py  exceptions.py  positions.py  service.py  user_service.py
src/assistant/tui/: __init__.py  app.py  chat.css
tests/: __init__.py  conftest.py  test_config.py  test_drop_database.py  test_export.py  test_restore.py  test_setup_database.py
tests/adapters/: test_content.py  test_dataload.py  test_dataload_update.py  test_evernote.py  test_registry.py  test_secrets.py  test_source.py
tests/adapters/plugins/: __init__.py  test_fake.py
tests/api/: conftest.py  test_auth.py  test_files.py  test_nodes.py  test_notebooks.py  test_notes.py  test_users.py
tests/attachments/: test_service.py  test_storage.py
tests/cli/: test_add_evernote.py  test_eval.py  test_export_db.py  test_generate_embeddings.py  test_import_db.py  test_load_data.py
tests/evals/: test_target.py
tests/models/: test_database.py  test_notes_schema.py  test_schema.py
tests/notes/: test_positions.py  test_service.py  test_user_service.py
tests/tui/: __init__.py  test_app.py
